update endpoint names
