# src/app.js
@@ -1,45 +1,47 @@
-import express from "express";
-import connect from "./database/mongo.js";
-import dotenv from "dotenv";
-import cors from "cors";
-import path from "path";
-import swaggerUi from "swagger-ui-express";
-import fs from "fs";
-import yaml from "js-yaml";
-import { getAllTask } from "./controllers/Task-controller.js";
-import { addTask } from "./controllers/addTask-controller.js";
-import { toggleTask } from "./controllers/doneTask-controller.js";
-import { removeTask } from "./controllers/removeTask-controller.js";
+import express from "express"
+import connect from "./database/mongo.js"
+import dotenv from "dotenv"
+import cors from "cors"
+import path from "path"
+import swaggerUi from "swagger-ui-express"
+import fs from "fs"
+import yaml from "js-yaml"
+import {
+  getAllTask,
+  addTask,
+  removeTask,
+  toggleTask,
+} from "./controllers/task-controller.js"
 
-dotenv.config();
-connect();
+dotenv.config()
+connect()
 
-const app = express();
+const app = express()
 
-app.use(express.json());
+app.use(express.json())
 
-app.use(cors());
+app.use(cors())
 
-const fileContents = fs.readFileSync("./src/swagger.yaml", "utf8");
+const fileContents = fs.readFileSync("./src/swagger.yaml", "utf8")
 
-const swaggerDocument = yaml.load(fileContents);
+const swaggerDocument = yaml.load(fileContents)
 
 const options = {
   customSiteTitle: "ToDo APP - Swagger API",
-};
+}
 
 app.use(
   express.static(path.join(new URL("../public", import.meta.url).pathname))
-);
+)
 
-app.get("/api/projects", getAllTask);
+app.get("/api/getTasks", getAllTask)
 
-app.post("/api/projects", addTask);
+app.post("/api/addTask", addTask)
 
-app.patch("/api/projects/:id", toggleTask);
+app.patch("/api/toggleTask/:id", toggleTask)
 
-app.delete("/api/projects/:id", removeTask);
+app.delete("/api/deleteTask/:id", removeTask)
 
-app.use("/", swaggerUi.serve, swaggerUi.setup(swaggerDocument, options));
+app.use("/", swaggerUi.serve, swaggerUi.setup(swaggerDocument, options))
 
-app.listen(6060);
+app.listen(3000)
